test/visibility/rename/renameUsedMod/renamePrivateUse3.good
renamePrivateUse3.chpl:12: In function 'main':
renamePrivateUse3.chpl:16: error: 'Foo' undeclared (first use this function)
